# mcp-second-brain

./: .gitignore  Dockerfile  Dockerfile.fastapi  README.md  download_model.py  index.py  main.py  pyproject.toml
src/: config.py  docs.py  file_utils.py  types.py
tests/: test_docs.py  test_file_utils.py
tests/static/folder/: h3.txt
