[project]
name = "mcp-second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.9",
    "fastmcp>=2.4.0",
    "loguru>=0.7.3",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "docling>=2.33.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
